--- a/oversightclient/public/index.html
+++ b/oversightclient/public/index.html
@@ -18,7 +18,7 @@
     <!-- MATERIALIZE -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <title>Oversight</title>
+    <title>Ovrsight</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
